added  form validation

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,4 +1,8 @@
 .navIcons:hover {
-    color: rgb(187, 186, 200);
-    transform: scale(1.2);
+  color: rgb(187, 186, 200);
+  transform: scale(1.1);
   }
+
+.linkProjects:hover {
+  color: rgb(19, 91, 18);
+}
